--- a/index.html
+++ b/index.html
@@ -8,9 +8,16 @@
     <title>Platformer</title>
 </head>
 <body>
+    <div id='container'>
+    <div id='gameOver'></div>
     <canvas id='gameArea' width="1750px" height="1000px"></canvas>
+    </div>
 </body>
 <footer>
     <script src="script.js"></script>
 </footer>
 </html>
+
+
+
+
